--- a/configs/run_inference.yaml
+++ b/configs/run_inference.yaml
@@ -3,7 +3,7 @@ defaults:
   - machine: local
   - callback: base 
   - data: bop
-  - model: cnos
+  - model: cnos_fast # Use cnos_fast instead of cnos, saves 2GB VRAM
   - _self_
 
 save_dir: ${machine.root_dir}/results/${name_exp}
