--- a/configs/run_inference.yaml
+++ b/configs/run_inference.yaml
@@ -3,9 +3,9 @@ defaults:
   - machine: local
   - callback: base 
   - data: bop
-  - model: cnos_fast # Use cnos_fast instead of cnos, saves 2GB VRAM
+  - model: cnos_fast # cnos
   - _self_
 
 save_dir: ${machine.root_dir}/results/${name_exp}
 name_exp: cnos_exps
-dataset_name:
+dataset_name: "manibot" #ycbv
