--- a/configs/download.yaml
+++ b/configs/download.yaml
@@ -9,4 +9,4 @@ level: 2
 disable_output: true
 num_workers: 4
 gpus: "0,1,2,3"
-dataset_name: ["manibot"] 
+dataset_name: ["manibot"] # ["manibot", "ycbv"]
